--- a/minneapolis-lemma-19/index.html
+++ b/minneapolis-lemma-19/index.html
@@ -33,15 +33,15 @@
 
 
 <section>
-<section id="slide-org6d23edb">
-<h2 id="org6d23edb"><span class="section-number-2">1</span> Lemmatization</h2>
+<section id="slide-org0388116">
+<h2 id="org0388116"><span class="section-number-2">1</span> Lemmatization</h2>
 <div class="outline-text-2" id="text-1">
 </div>
 </section>
 </section>
 <section>
-<section id="slide-orgc99e21a" data-background="#282A36">
-<h3 id="orgc99e21a">Task Definition</h3>
+<section id="slide-org7385a09" data-background="#282A36">
+<h3 id="org7385a09">Task Definition</h3>
 <aside class="notes">
 <ul>
 <li>A snippet from a sentence in PROIEL latin corpus (part of UD)</li>
@@ -57,8 +57,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orgdf9a8d7">
-<h3 id="orgdf9a8d7">Applications</h3>
+<section id="slide-org8deb178">
+<h3 id="org8deb178">Applications</h3>
 <ul>
 <li>Linking to dictionary</li>
 <li>Text Classification (esp. for morphologically complex languages)</li>
@@ -70,8 +70,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org79575ff">
-<h3 id="org79575ff">Challenges</h3>
+<section id="slide-orgfe6ac37">
+<h3 id="orgfe6ac37">Challenges</h3>
 <ol>
 <li class="fragment roll-in">Token-lemma disambiguation
 <ul>
@@ -92,8 +92,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orgf56895d">
-<h3 id="orgf56895d">Historical Languages</h3>
+<section id="slide-org5d6ffe1">
+<h3 id="org5d6ffe1">Historical Languages</h3>
 <ul>
 <li>Span a long historical period (e.g. middle ages)</li>
 <li>Present high genre specificity (charters, medicine, history)</li>
@@ -102,8 +102,8 @@
 </ul>
 
 </section>
-<section id="slide-org70336b2">
-<h4 id="org70336b2">Additional Challenging Aspect</h4>
+<section id="slide-orgf6bb789">
+<h4 id="orgf6bb789">Additional Challenging Aspect</h4>
 <ol>
 <li>Token-lemma disambiguation</li>
 <li>Morphological Complexity</li>
@@ -112,8 +112,8 @@
 </ol>
 
 </section>
-<section id="slide-org4b2b340" data-background="#F0F0F0">
-<h4 id="org4b2b340">Orthographic Variation Examples</h4>
+<section id="slide-org3c35a27" data-background="#F0F0F0">
+<h4 id="org3c35a27">Orthographic Variation Examples</h4>
 <aside class="notes">
 <ul>
 <li>Middle dutch and low german corpora</li>
@@ -127,8 +127,8 @@
 <img src="./images/token-lemma.png" class="stretch"/>
 
 </section>
-<section id="slide-orge323be7">
-<h4 id="orge323be7">Implications of Orthographic Variation for Lemmatization</h4>
+<section id="slide-orge18fe39">
+<h4 id="orge18fe39">Implications of Orthographic Variation for Lemmatization</h4>
 <ul>
 <li>Increases token-lemma ambiguities</li>
 <li>Sparsifies evidence for token-lemma mappings (due to higher token/type ratio)</li>
@@ -138,34 +138,34 @@
 </section>
 </section>
 <section>
-<section id="slide-orgb6e9713">
-<h2 id="orgb6e9713"><span class="section-number-2">2</span> Architecture</h2>
+<section id="slide-orgfd3ae5c">
+<h2 id="orgfd3ae5c"><span class="section-number-2">2</span> Architecture</h2>
 <div class="outline-text-2" id="text-2">
 </div>
 </section>
 </section>
 <section>
-<section id="slide-org86a0652" data-background="#FFFFFF">
-<h3 id="org86a0652">Encoder-Decoder</h3>
+<section id="slide-org0b7e52e" data-background="#FFFFFF">
+<h3 id="org0b7e52e">Encoder-Decoder</h3>
 <img src="images/encoder-decoder.png" class="stretch"/>
 
 </section>
 </section>
 <section>
-<section id="slide-org9015aa4" data-background="#FFFFFF">
-<h3 id="org9015aa4">Modeling Sentential Context</h3>
+<section id="slide-org5bdbbed" data-background="#FFFFFF">
+<h3 id="org5bdbbed">Modeling Sentential Context</h3>
 <img src="images/sentence-encoder.png" class="stretch"/>
 
 </section>
 </section>
 <section>
-<section id="slide-org75d4d01" data-background="#FFFFFF">
-<h3 id="org75d4d01">Improved Sentence Encodings (Contribution)</h3>
+<section id="slide-org76ce99d" data-background="#FFFFFF">
+<h3 id="org76ce99d">Improved Sentence Encodings (Contribution)</h3>
 <img src="images/sentence-encoder_joint.png" class="stretch"/>
 
 </section>
-<section id="slide-org3a69365">
-<h4 id="org3a69365">Joint Learning</h4>
+<section id="slide-org21055c9">
+<h4 id="org21055c9">Joint Learning</h4>
 <aside class="notes">
 <ul>
 <li>lemma encoder-decoder loss</li>
@@ -195,15 +195,15 @@
 </section>
 </section>
 <section>
-<section id="slide-orgd5da127">
-<h2 id="orgd5da127"><span class="section-number-2">3</span> Corpus</h2>
+<section id="slide-orgfe4e32a">
+<h2 id="orgfe4e32a"><span class="section-number-2">3</span> Corpus</h2>
 <div class="outline-text-2" id="text-3">
 </div>
 </section>
 </section>
 <section>
-<section id="slide-orgc0d8eb9">
-<h3 id="orgc0d8eb9">Historical Languages</h3>
+<section id="slide-org82c7537">
+<h3 id="org82c7537">Historical Languages</h3>
 <ul>
 <li>Selection of open-source 9 corpora</li>
 <li>Language coverage:
@@ -221,8 +221,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org08729e7">
-<h3 id="org08729e7">Standard Languages</h3>
+<section id="slide-org2b47b46">
+<h3 id="org2b47b46">Standard Languages</h3>
 <p>
 20 Languages from the Universal Dependencies
 </p>
@@ -230,8 +230,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org5a81cd0">
-<h3 id="org5a81cd0">Statistics</h3>
+<section id="slide-org0f7090c">
+<h3 id="org0f7090c">Statistics</h3>
 <aside class="notes">
 <ul>
 <li>Some statistics where we see large variance in terms of size</li>
@@ -257,8 +257,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org4eadef0">
-<h2 id="org4eadef0"><span class="section-number-2">4</span> Baselines</h2>
+<section id="slide-org521fa5b">
+<h2 id="org521fa5b"><span class="section-number-2">4</span> Baselines</h2>
 <ul>
 <li>Strongest non-neural data-driven lemmatizers</li>
 <li>Based on edit-tree induction</li>
@@ -268,21 +268,21 @@
 </section>
 </section>
 <section>
-<section id="slide-org13add9b" data-background="#FFFFFF">
-<h3 id="org13add9b">Edit-tree Induction</h3>
+<section id="slide-orgba91d44" data-background="#FFFFFF">
+<h3 id="orgba91d44">Edit-tree Induction</h3>
 <img src="images/edit-tree.png" class="" />
 
 
 </section>
-<section id="slide-org2566655">
-<h4 id="org2566655">Morfette (Chrupała et al. 2008)</h4>
+<section id="slide-orgdf41090">
+<h4 id="orgdf41090">Morfette (Chrupała et al. 2008)</h4>
 <p>
 Beam-search decoding of edit trees and POS <a href="https://github.com/gchrupala/morfette">https://github.com/gchrupala/morfette</a>
 </p>
 
 </section>
-<section id="slide-org5d54d39">
-<h4 id="org5d54d39">Lemming (Cotterell et al. 2015)</h4>
+<section id="slide-orgfe2b8df">
+<h4 id="orgfe2b8df">Lemming (Cotterell et al. 2015)</h4>
 <p>
 Second-order CRF decoding of edit-trees and POS <a href="http://cistern.cis.lmu.de/lemming/">http://cistern.cis.lmu.de/lemming/</a>
 </p>
@@ -290,8 +290,8 @@ Second-order CRF decoding of edit-trees and POS <a href="http://cistern.cis.lmu.
 </section>
 </section>
 <section>
-<section id="slide-org54a4852">
-<h2 id="org54a4852"><span class="section-number-2">5</span> Evaluation</h2>
+<section id="slide-org523df59">
+<h2 id="org523df59"><span class="section-number-2">5</span> Evaluation</h2>
 <ul>
 <li>Accuracy of <b>known</b>, <b>unknown</b> and <b>ambiguous</b> tokens</li>
 <li>(Un)known &amp; ambiguous is empirically determined based on train/dev split</li>
@@ -301,15 +301,15 @@ Second-order CRF decoding of edit-trees and POS <a href="http://cistern.cis.lmu.
 </section>
 </section>
 <section>
-<section id="slide-orge81c04f">
-<h2 id="orge81c04f"><span class="section-number-2">6</span> Results</h2>
+<section id="slide-org0249fb8">
+<h2 id="org0249fb8"><span class="section-number-2">6</span> Results</h2>
 <div class="outline-text-2" id="text-6">
 </div>
 </section>
 </section>
 <section>
-<section id="slide-orgfa09ded" data-background="#FFFFFF">
-<h3 id="orgfa09ded">Historical Languages</h3>
+<section id="slide-org78b24c2" data-background="#FFFFFF">
+<h3 id="org78b24c2">Historical Languages</h3>
 <aside class="notes">
 <ul>
 <li>Plain is already better</li>
@@ -325,8 +325,8 @@ Second-order CRF decoding of edit-trees and POS <a href="http://cistern.cis.lmu.
 </section>
 </section>
 <section>
-<section id="slide-org24d214d" data-background="#FFFFFF">
-<h3 id="org24d214d">Standard Languages</h3>
+<section id="slide-org40a60b5" data-background="#FFFFFF">
+<h3 id="org40a60b5">Standard Languages</h3>
 <aside class="notes">
 <ul>
 <li>LM wins overall</li>
@@ -340,15 +340,15 @@ Second-order CRF decoding of edit-trees and POS <a href="http://cistern.cis.lmu.
 <img src="images/UD.png" class=""/>
 
 </section>
-<section id="slide-orgb01c5da">
-<h4 id="orgb01c5da">How informative is averaging over typologically different languages?</h4>
+<section id="slide-org87463e1">
+<h4 id="org87463e1">How informative is averaging over typologically different languages?</h4>
 <p>
 Different inductive biases may benefit some languages more than others
 </p>
 
 </section>
-<section id="slide-orgcdb0397">
-<h4 id="orgcdb0397">Results by Morphological Typology</h4>
+<section id="slide-orgddc9aad">
+<h4 id="orgddc9aad">Results by Morphological Typology</h4>
 <aside class="notes">
 <ul>
 <li>Type 1: Balto-slavic: strongly suffixing, complex nominal morphology</li>
@@ -372,8 +372,8 @@ Different inductive biases may benefit some languages more than others
 </p>
 
 </section>
-<section id="slide-org298714f" data-background="#FFFFFF">
-<h4 id="org298714f"></h4>
+<section id="slide-orgca40487" data-background="#FFFFFF">
+<h4 id="orgca40487"></h4>
 <aside class="notes">
 <ul>
 <li>Type 3: Non-neural is really hard to beat</li>
@@ -389,15 +389,15 @@ Different inductive biases may benefit some languages more than others
 </section>
 </section>
 <section>
-<section id="slide-org26532a1">
-<h2 id="org26532a1"><span class="section-number-2">7</span> Discussion</h2>
+<section id="slide-orgfffda54">
+<h2 id="orgfffda54"><span class="section-number-2">7</span> Discussion</h2>
 <div class="outline-text-2" id="text-7">
 </div>
 </section>
 </section>
 <section>
-<section id="slide-org22e42c1">
-<h3 id="org22e42c1">Limits of edit-tree induction</h3>
+<section id="slide-orge1976ce">
+<h3 id="orge1976ce">Limits of edit-tree induction</h3>
 <aside class="notes">
 <ul>
 <li>Very good inductive bias for western european languages</li>
@@ -410,14 +410,14 @@ Different inductive biases may benefit some languages more than others
 <img src="images/error-reduction-by-trees1.png" class="stretch"/>
 
 <p>
-Error reduction of best neural vs best tree-induction by #Trees
+Error reduction of best neural vs best tree-induction by #Trees (Spearman R=0.79)
 </p>
 
 </section>
 </section>
 <section>
-<section id="slide-org2bed72d">
-<h3 id="org2bed72d">How does joint LM learning help</h3>
+<section id="slide-org84ac253">
+<h3 id="org84ac253">How does joint LM learning help</h3>
 <aside class="notes">
 <p>
 Visualizing the intuition that joint learning helps resolving ambiguities
@@ -428,14 +428,14 @@ Visualizing the intuition that joint learning helps resolving ambiguities
 <img src="images/error-reduction-by-ambiguity1.png" class="stretch"/>
 
 <p>
-Error reduction of SentLM vs Sent by Ambiguity
+Error reduction of SentLM vs Sent by Ambiguity (Spearman R=0.53)
 </p>
 
 </section>
 </section>
 <section>
-<section id="slide-orgc01d03c" data-background="#FFFFFF">
-<h3 id="orgc01d03c">Why does it help?</h3>
+<section id="slide-org31a4ed3" data-background="#FFFFFF">
+<h3 id="org31a4ed3">Why does it help?</h3>
 <img src="images/probing.png" class=""/>
 
 <p>
@@ -445,8 +445,8 @@ Diagnostic classifiers trained on frozen encodings to predict morphology
 </section>
 </section>
 <section>
-<section id="slide-orgfc3e6a6">
-<h2 id="orgfc3e6a6"><span class="section-number-2">8</span> Conclusions</h2>
+<section id="slide-org75a6133">
+<h2 id="org75a6133"><span class="section-number-2">8</span> Conclusions</h2>
 <ul>
 <li>Historical Languages pose additional difficulties to lemmatizers</li>
 <li>Edit-trees are challenged by spelling variation</li>
@@ -458,8 +458,8 @@ Diagnostic classifiers trained on frozen encodings to predict morphology
 </section>
 </section>
 <section>
-<section id="slide-org657e66e">
-<h2 id="org657e66e"><span class="section-number-2">9</span> Thank you</h2>
+<section id="slide-org0c37590">
+<h2 id="org0c37590"><span class="section-number-2">9</span> Thank you</h2>
 <ul>
 <li>Download &amp; Preprocessing Scripts: <a href="https://www.github.com/emanjavacas/pie-data">https://www.github.com/emanjavacas/pie-data</a></li>
 <li>Sequence Labeling Framework: <a href="https://www.github.com/emanjavacas/pie">https://www.github.com/emanjavacas/pie</a></li>
